--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "~9.0.2",
     "@angular/compiler": "~9.0.2",
     "@angular/core": "~9.0.2",
+    "@angular/fire": "^5.4.2",
     "@angular/forms": "~9.0.2",
     "@angular/localize": "^9.0.4",
     "@angular/platform-browser": "~9.0.2",
@@ -24,6 +25,7 @@
     "animate.css": "^3.7.2",
     "bootstrap": "^4.4.1",
     "bootstrap-icons": "^1.0.0-alpha2",
+    "firebase": "^7.11.0",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
