--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "animate.css": "^3.7.2",
     "bootstrap": "^4.4.1",
     "bootstrap-icons": "^1.0.0-alpha2",
+    "chart.js": "^2.9.3",
     "firebase": "^7.11.0",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.1",
+    "primeicons": "^2.0.0",
+    "primeng": "^9.0.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
